<package>
  <name>vrep_plugin_imu</name>
  <description>V-REP plugin for Imu in ROS (publish sensor_msgs/Imu)</description>
  <maintainer email="bartolomeodellacorte@yahoo.it">Bart</maintainer>
  <version>1.0.0</version>
  <author>Bart</author>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrep_skeleton_msg_and_srv</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roslib</run_depend>
</package>


